# discordshim_rs

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json
src/: embedbuilder.rs  main.rs  messages.rs  server.rs
src/commands/: status.rs
