[package]
name = "discordshim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
prost = "0.11"
futures = "0.3"
byteorder = "1.4.3"
zip = "0.6.6"
protobuf = "3.2.0"
log = "0.4.18"
pretty_env_logger = "0.5.0"
regex = "1.9.3"
csv = "1.2.2"
serde = "1.0.185"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache",
    "interactions_endpoint",
]
version = "0.12.1"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

[build-dependencies]
protobuf-codegen = "3.2.0"
protobuf-parse = "3.2.0"